// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`INITIAL_STATE is correct 1`] = `
Object {
  "token": "",
}
`;

exports[`SELECT_AVATAR returns the correct state 1`] = `
Object {
  "token": "tokenstring",
}
`;

exports[`SET_TOKEN returns the correct state 1`] = `
Object {
  "token": "tokenstring",
}
`;
